# Scira

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  start.bat
assets/: 强化学习_20260619_132031.md
config/: settings.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
scripts/: migrate_papers_to_per_paper_dirs.py
src/: __init__.py  main.py
src/agents/: __init__.py  analyzer.py  base.py  intent.py  kb_qa.py  orchestrator.py  paper_reading.py  prompts.py  reader.py  retrieval.py  reviewer.py  tools.py  writer.py  (+1 more)
tests/: conftest.py  eval_full_workflow.py  evaluate_langsmith.py  manual_edit_citation_checklist.md  test_base_agent_invoke_stream.py  test_caj_parser.py  test_cnki_searcher.py  test_domain_routing.py  test_download_progress_counting.py  test_edit_citation_flow.py  test_edit_citation_integration.py  test_edit_citation_intent.py  test_edit_citation_state.py  test_generation.py  test_import_pipeline.py  test_kb_context.py  test_kb_qa_agent.py  test_kb_qa_e2e.py  test_kb_qa_orchestration.py  test_kb_qa_pdf_helper.py  test_kb_qa_routing.py  test_knowledge_base_perception.py  test_logging_metrics.py  test_mcp.py  test_mcp_http.py  test_orchestrator_kb_summary.py  test_paper_info_extractor.py  test_paper_selection_modal.py  test_pdf_search.py  test_pipeline.py  test_report_editing.py  test_retrieval_constraints.py  test_retrieval_routing.py  test_text_extractor.py  test_tool_calling.py  test_tools.py  test_wanfang_searcher.py  test_writer_stream.py  test_writing_style.py
(+75 files in other folders)
